# PooledCalculation

./: CMakeLists.txt  README.md  main.cpp
CalcPool/: Platform.h
CalcPool/Execution/: Progress.cpp  Progress.h  ServerPool.cpp  ServerPool.h  SingleThreaded.h  ThreadPool.cpp  ThreadPool.h
CalcPool/Networking/: PackageServer.cpp  PackageServer.h  TCPIP.cpp  TCPIP.h
CalcPool/Util/: Argparse.cpp  Argparse.h  Cpu.cpp  Cpu.h  ProgressBar.cpp  ProgressBar.h  UUID.cpp  UUID.h
cmake/: CheckFlags.cmake  CpuDetect.cmake
